--- a/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee_afterpay.phtml
+++ b/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee_afterpay.phtml
@@ -26,7 +26,8 @@
     <?php if (isset($_total['block_name']) && $_total['block_name'] == 'buckaroo_fee_afterpay'): ?>
         <tr>
             <td class="label"><?php echo $_total['label'] ?>
-                <input type="checkbox" name="creditmemo[buckaroo_fee_refundable]" id="isRefund" checked style="display: none">
+                <input type="checkbox" name="creditmemo[buckaroo_fee_refundable]" id="isRefund"
+                 checked style="display: none">
                 <div id="buckaroo_fee_adv">
                 </div>
             </td>
