--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_creditcard payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_creditcard payment-method" data-bind="css: {'_active': (getCode() == isChecked()), 'buckaroo_magento2_flow_authorize': paymentFlow == 'authorize'}">
     <div class="payment-method-title field choice">
         <input type="radio"
                name="payment[method]"
