BP-759 Label of card is Creditcard instead of Bancontact card

--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -20,7 +20,7 @@
 
             <input id="buckaroo_magento2_mrcash_clientSideModeCc" class="bank-types-input" type="radio" checked="checked"
                    data-bind="click: setClientSideMode.bind($data, 'cc')" name="payment[buckaroo_magento2_mrcash][clientsidemode]">
-            <label for="buckaroo_magento2_mrcash_clientSideModeCc"><span data-bind="i18n: 'Credit card'"></span></label>
+            <label for="buckaroo_magento2_mrcash_clientSideModeCc"><span data-bind="i18n: 'Bancontact card'"></span></label>
             <br>
 
             <!-- ko if: isCcMode -->
