--- a/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee_refund.phtml
+++ b/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee_refund.phtml
@@ -21,12 +21,14 @@
 <?php endforeach?>
 <script>
     require(['prototype'], function() {
-
+        let inclTax = <?php echo empty($_total['incl_tax']) ? 0 : 1;  ?>;
         let feeElement = document.getElementById('buckaroo_fee');
         let feeElementValue = feeElement.value;
 
         let isFeeRefund = document.getElementById('isRefund');
-        let grandTotalElement = document.querySelector('tfoot span.price');
+        let grandTotalElement = document.querySelector(
+            inclTax ? '.order-subtotal-table tr:last-child td strong span.price' : 'tfoot span.price'
+        );
         let grandTotalElementValue = grandTotalElement.innerHTML;
 
         isFeeRefund.addEventListener('change', function () {
