--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -68,6 +68,14 @@
                                 </item>
                                 <item name="steps" xsi:type="array">
                                     <item name="children" xsi:type="array">
+                                        
+                                        <item name="idin-step" xsi:type="array">
+                                            <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/checkout/idin/idin-step-view</item>
+                                            <item name="sortOrder" xsi:type="string">0</item>
+                                            <item name="children" xsi:type="array">
+                                            </item>
+                                        </item>
+
                                         <item name="billing-step" xsi:type="array">
                                             <item name="children" xsi:type="array">
                                                 <item name="payment" xsi:type="array">
