--- a/view/frontend/templates/catalog/product/view/idin.phtml
+++ b/view/frontend/templates/catalog/product/view/idin.phtml
@@ -1,5 +1,4 @@
-<?xml version="1.0"?>
-<!--
+<?php
 /**
  * NOTICE OF LICENSE
  *
@@ -18,13 +17,10 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
- -->
-<config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:Buckaroo_Magento2:etc/buckaroo_module.xsd">
-    <module name="Buckaroo_Magento2" setup_version="1.35.1" build_number="1769" stability="stable">
-        <sequence>
-            <module name="Magento_Payment"/>
-            <module name="Magento_ReleaseNotification"/>
-            <module name="Magento_Sales"/>
-        </sequence>
-    </module>
-</config>
+?>
+<?php if($this->canShowProductIdin()): ?>
+    <div id="buckaroo_idin_product" style="background: #d4eded; padding: 10px; display: inline-block; width: 100%; ">
+        <img width="50px" data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/idin.svg') }" style="float: left; width: 50px; "/>
+        <span data-bind="i18n: 'You must be 18 or older to pay for the products below'" style="height: 50px; display: block; float: left; line-height: 50px; margin-left: 11px; "></span>
+    </div>
+<?php endif; ?>
