--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -1336,3 +1336,43 @@
     margin-top: 7px
 }
 
+#checkout-step-idin{
+    padding: 10px;
+    background: #d4eded;
+    display: inline-block;
+    width: 100%;
+}
+
+.buckaroo_idin_left{
+    width: 50%;
+    float: left;
+    margin-top: 10px;
+}
+
+.buckaroo_idin_left img{
+    float: left;
+}
+
+.buckaroo_idin_left span{
+    height: 50px;
+    display: inline-block;
+    float: left;
+    line-height: 50px;
+    padding-left: 5px;
+}
+
+.buckaroo_idin_right{
+    width: 50%;
+    float: right;
+}
+
+#idin-verification{
+    margin-top: 5px;
+    width: 100%;
+}
+
+.opc-wrapper #step_idin{
+    clear: both;
+    width: 100%;
+    display: inline-block!important;
+}
