--- a/view/adminhtml/web/css/adminhtml_system_config_edit.css
+++ b/view/adminhtml/web/css/adminhtml_system_config_edit.css
@@ -386,3 +386,11 @@
     border: 1px solid #adadad;
     list-style: 'none'
 }
+
+.sortable_disable{
+    background-color: #e9e9e9;
+    border-color: #adadad;
+    color: #303030;
+    opacity: .5;
+    cursor: not-allowed;
+}
