BP-832 Creditcard sort order is not working correctly.

--- a/view/adminhtml/templates/creditcard_sort_widget.phtml
+++ b/view/adminhtml/templates/creditcard_sort_widget.phtml
@@ -32,7 +32,7 @@
     ], function ($) {
         'use strict';
 
-        let ccInherit = $('#payment_buckaroo_magento2_payment_section_buckaroo_magento2_creditcard_sort_creditcards_inherit');
+        let ccInherit = $('input[name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_creditcard][fields][sort_creditcards][inherit]"]');
 
         let listSelector = '#sort_creditcard_list';
         $(listSelector).sortable({
