--- a/view/adminhtml/templates/giftcards_sort_widget.phtml
+++ b/view/adminhtml/templates/giftcards_sort_widget.phtml
@@ -39,7 +39,7 @@
             items: 'p'
         });
 
-        let ccInherit = $('#payment_buckaroo_magento2_payment_section_buckaroo_magento2_giftcards_sort_giftcards_inherit');
+        let ccInherit = $('input[name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_giftcards][fields][sort_giftcards][inherit]"]');
         let selector = 'select[name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_giftcards][fields][allowed_giftcards][value][]"]';
         let inputText = $('#sort_giftcards').val();
         let selectorWrapper = '.giftcards_sort_wrapper';
