--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -410,6 +410,19 @@
     content: ' ';
 }
 
+.buckaroo_magento2_image_title_custom:after {
+    background: none!important;
+}
+
+.buckaroo_magento2_logo {
+    float: right;
+    width: auto;
+    max-width: 65px;
+    margin-top: -10px;
+    max-height: 50px;
+    margin-right: 5px;
+}
+
 /* ===================== All Giftcards ============================ */
 .buckaroo_magento2_giftcards_group .buckaroo_magento2_image_title:after {
     background: url(../images/buckaroo_magento2_giftcards_title.png) no-repeat;
@@ -632,7 +645,7 @@
 .buckaroo_magento2_tinka .buckaroo_magento2_image_title:after {
     background: url(../images/buckaroo_magento2_tinka_title.svg) no-repeat;
     float: right;
-    margin-right: -25px;
+    margin-right: -15px;
     margin-top: 0px;
     background-size: auto 26px;
     width: 105px;
