--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -412,14 +412,16 @@
 
 .buckaroo_magento2_image_title_custom:after {
     background: none!important;
+    width: 1px!important;
+    height: 1px!important;
 }
 
 .buckaroo_magento2_logo {
     float: right;
     width: auto;
-    max-width: 65px;
-    margin-top: -10px;
-    max-height: 50px;
+    max-width: 50px;
+    margin-top: -7px;
+    max-height: 40px;
     margin-right: 5px;
 }
 
@@ -1410,4 +1412,9 @@
 .opc-wrapper #step_idin{
     clear: both;
     display: inline-block!important;
+}
+
+.buckaroo_magento2_all_giftcards{
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
