--- a/view/frontend/email/second_chance2.html
+++ b/view/frontend/email/second_chance2.html
@@ -18,7 +18,7 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 -->
-<!--@subject {{trans "Your second chance %store_name" store_name=$store.getFrontendName()}} @-->
+<!--@subject {{trans "Your last second chance %store_name" store_name=$store.getFrontendName()}} @-->
 <!--@vars {
 "var formattedBillingAddress|raw":"Billing Address",
 "var order.getEmailCustomerNote()":"Email Order Note",
