--- a/view/frontend/web/template/checkout/idinstep.html
+++ b/view/frontend/web/template/checkout/idinstep.html
@@ -28,3 +28,17 @@
          </div>
     </div>
 </li>
+<!-- ko if: hideSubmitButton -->
+<style>
+    .action.primary.checkout {
+        display: none;
+    }
+</style>
+<!--/ko-->
+<!-- ko if: hideIdinBlock -->
+<style>
+    .opc-wrapper #step_idin {
+        display: none !important;
+    }
+</style>
+<!--/ko-->
