--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -101,7 +101,7 @@
 
             <input id="buckaroo_magento2_mrcash_clientSideModeMobile" class="bank-types-input" type="radio"
                    data-bind="click: setClientSideMode.bind($data, 'mobile')" name="payment[buckaroo_magento2_mrcash][clientsidemode]">
-            <label for="buckaroo_magento2_mrcash_clientSideModeMobile"><span data-bind="i18n: 'Mobile application'"></span></label>
+            <label for="buckaroo_magento2_mrcash_clientSideModeMobile"><span data-bind="i18n: 'Bancontact QR'"></span></label>
 
         </div>
 
