BP-957 FIX VAT numbe

--- a/view/frontend/web/template/payment/buckaroo_magento2_billink.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_billink.html
@@ -147,6 +147,7 @@
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': false }) },
                                    valueUpdate: 'blur',
+                                   value: VATNumberValidate
                                    ">
                         </div>
                     </div>
