Move translation to where variable is defined. You can't translate variables inside

--- a/view/frontend/web/template/cart/totals/buckaroo_fee.html
+++ b/view/frontend/web/template/cart/totals/buckaroo_fee.html
@@ -2,15 +2,15 @@
 <!-- ko if: displayBothPrices() -->
 <tr class="totals buckaroo_fee excl">
     <th class="mark">
-        <span data-bind="text: $t(getTitle()) + ' ' + $t(excludingTaxMessage)"></span>
+        <span data-bind="text: $t(getTitle()) + ' ' + excludingTaxMessage"></span>
     </th>
-    <td data-bind="text: getValue(), attr: {'data-th': $t(excludingTaxMessage)}" class="amount"></td>
+    <td data-bind="text: getValue(), attr: {'data-th': excludingTaxMessage}" class="amount"></td>
 </tr>
 <tr class="totals buckaroo_fee incl">
     <th class="mark">
-        <span data-bind="text: $t(getTitle()) + ' ' + $t(includingTaxMessage)"></span>
+        <span data-bind="text: $t(getTitle()) + ' ' + includingTaxMessage"></span>
     </th>
-    <td data-bind="text: getIncludingTaxValue(), attr: {'data-th': $t(includingTaxMessage)}" class="amount"></td>
+    <td data-bind="text: getIncludingTaxValue(), attr: {'data-th': includingTaxMessage}" class="amount"></td>
 </tr>
 <!-- /ko -->
 <!-- ko if: displayPriceInclTax() -->
