--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -22,13 +22,13 @@
                         <span class="text">
                             <?= $block->escapeHtml(__('Magento Commerce'));?>:
                         </span>
-                        <span class="version"> 2.3.6, 2.4.2 </span>
+                        <span class="version"> 2.3.7-p2, 2.4.3-p1 </span>
                     </li>
                     <li>
                         <span class="text">
                             <?= $block->escapeHtml(__('Magento Open Source'));?>:
                         </span>
-                        <span class="version"> 2.3.6, 2.4.2 </span>
+                        <span class="version"> 2.3.7-p2, 2.4.3-p1 </span>
                     </li>
 
                     <li>
