--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -27,8 +27,8 @@
     <body>
         <referenceBlock name="content">
             <block class="Buckaroo\Magento2\Block\Frontend\ThemeBodyClass" name="buckaroo.theme-body-class" />
-        </referenceBlock>
-
+        </referenceBlock> 
+           
         <referenceBlock name="checkout.root">
             <arguments>
                 <argument name="jsLayout" xsi:type="array">
@@ -90,6 +90,15 @@
                                                         <item name="renders" xsi:type="array">
                                                             <!-- merge payment method renders here -->
                                                             <item name="children" xsi:type="array">
+                                                                <item name="ideal_new" xsi:type="array">
+                                                                    <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/payment/ideal_new</item>
+                                                                    <item name="methods" xsi:type="array">
+                                                                        <item name="ideal_new" xsi:type="array">
+                                                                            <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+                                                                        </item>
+                                                                    </item>
+                                                                </item>
+
                                                                 <item name="buckaroo-payments" xsi:type="array">
                                                                     <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/payment/buckaroo-payments</item>
                                                                     <item name="methods" xsi:type="array">
