BP-1442 Bancontact mobile: only QR visible no button

--- a/view/frontend/templates/checkout/mrcash/pay.phtml
+++ b/view/frontend/templates/checkout/mrcash/pay.phtml
@@ -4,8 +4,8 @@
     <div id="buckaroo_magento2_mrcash_items">
         <p id="buckaroo_magento2_mrcash_title"><?= /* @noEscape */ __('Scan onderstaande code binnen 15 minuten met de'); ?>&nbsp;
             <a target="_blank" href="https://www.bancontact.com/nl"><?= /* @noEscape */ __('Bancontact app'); ?></a></p>
-        <div id="buckaroo_magento2_mrcash_qr"></div>
-        <button id="buckaroo_magento2_mrcash_url" type="button" style="display: none;"></button>
+            <button id="buckaroo_magento2_mrcash_url" class="action-primary" type="button" style="width:100%; display: none;"><?= /* @noEscape */ __('Bancontact app'); ?></button>
+            <div id="buckaroo_magento2_mrcash_qr"></div>
 
         <button id="buckaroo_magento2_mrcash_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
             <span><?= /* @noEscape */ (__('Cancel')); ?></span>
