--- a/view/frontend/layout/checkout_cart_index.xml
+++ b/view/frontend/layout/checkout_cart_index.xml
@@ -11,6 +11,9 @@
             <block class="Buckaroo\Magento2\Block\Catalog\Product\View\Applepay" name="buckaroo_magento2.checkout.cart.applepay"
                    after="checkout.cart.methods.onepage.bottom" template="Buckaroo_Magento2::checkout/cart/applepay.phtml">
             </block>
+            <block class="Buckaroo\Magento2\Block\Catalog\Product\View\PaypalExpress" name="buckaroo_magento2.checkout.cart.paypal.express"
+                   after="checkout.cart.methods.onepage.bottom" template="Buckaroo_Magento2::checkout/cart/paypal-express.phtml">
+            </block>
         </referenceBlock>
         <referenceBlock name="checkout.cart.order.actions">
             <block class="Buckaroo\Magento2\Block\Cart\BuckarooConfig" name="checkout.cart.order.actions.buckaroo-fee_options" template="cart/buckaroo_config.phtml" cacheable="false"/>
