BP-1458 Support Magento 2.4.4 including PHP 8.1 (#493)
* BP-1458 Support Magento 2.4.4 including PHP 8.1

* fix error from admin dashboard & redirect to empty cart on success

* add new version support to the list

* next version will only be compatibile with php 8.1 so m2.4.4

* fix point of sale

* add missing addError function

* updated composer to install ony on php ^8.1

Co-authored-by: Ivascu Madalin <madalin.ivascu@arnia.ro>

--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -22,13 +22,13 @@
                         <span class="text">
                             <?= $block->escapeHtml(__('Magento Commerce'));?>:
                         </span>
-                        <span class="version"> 2.3.7-p2, 2.4.3-p1 </span>
+                        <span class="version"> 2.4.4 </span>
                     </li>
                     <li>
                         <span class="text">
                             <?= $block->escapeHtml(__('Magento Open Source'));?>:
                         </span>
-                        <span class="version"> 2.3.7-p2, 2.4.3-p1 </span>
+                        <span class="version"> 2.4.4 </span>
                     </li>
 
                     <li>
