--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -1425,3 +1425,22 @@
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
 }
+.buckaroo-giftcard-delete {
+    cursor: pointer;
+}
+.buckaroo-giftcard-delete:after{
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 24px;
+    line-height: 24px;
+    color: #b30000;
+    content: '\e61f';
+    font-family: 'luma-icons';
+    margin: -2px 0 0;
+    vertical-align: middle;
+    display: inline-block;
+    font-weight: normal;
+    overflow: hidden;
+    speak: none;
+    text-align: center;
+}
