Refactoring - Implement ConfigInterface from Payment gateway in current ConfigProviders - Add Validators for "availability" validator Pool, but the payment methods appears

--- a/view/frontend/templates/info/payment_method.phtml
+++ b/view/frontend/templates/info/payment_method.phtml
@@ -18,7 +18,13 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<?php $bpePaymentCode = $block->escapeHtml($block->getMethod()->buckarooPaymentMethodCode); ?>
+<?php
+
+if($block->getMethod() instanceof \Magento\Payment\Model\Method\Adapter) {
+    $bpePaymentCode = $block->escapeHtml($block->getMethod()->getCode());
+} else {
+    $bpePaymentCode = $block->escapeHtml($block->getMethod()->buckarooPaymentMethodCode);
+} ?>
 
 <?php
 if ($giftCards = $block->getGiftCards()) {
